[FIX] html_editor: align checklist items with other list items in RTL
When using a right-to-left language, the checklist items are misaligned
because of a right margin.

This commit removes that margin to realign all types of list items.

Steps to reproduce:
- Set the user's language to Arabic
- Go to a "To do" node
- Insert a numbered list with some elements
- Insert a bulletted list with some elements
- Insert a checklist with some elements

=> The checklist elements were not aligned with the elements of the
other lists

task-5155800

--- a/addons/html_editor/static/src/scss/html_editor.common.scss
+++ b/addons/html_editor/static/src/scss/html_editor.common.scss
@@ -190,15 +190,27 @@ ul.o_checklist {
     }
 }
 /*rtl:begin:ignore*/
-ul.o_checklist[dir="rtl"] li:not(.oe-nested)::before {
-    left: auto;
-    right: - $o-checklist-margin-left;
-    text-align: right;
+/* Actual RTL, through user language or switch command */
+.o_rtl ul.o_checklist, ul.o_checklist[dir="rtl"] {
+    li {
+        margin-right: unset;
+        &:not(.oe-nested)::before {
+            left: auto;
+            right: - $o-checklist-margin-left;
+            text-align: right;
+        }
+    }
 }
-ul.o_checklist[dir="ltr"] li:not(.oe-nested)::before {
-    right: auto;
-    left: - $o-checklist-margin-left;
-    text-align: left;
+/* Actual LTR, from RTL language, using switch command */
+ul.o_checklist[dir="ltr"] {
+    li {
+        margin-left: unset;
+        &:not(.oe-nested)::before {
+            right: auto;
+            left: - $o-checklist-margin-left;
+            text-align: left;
+        }
+    }
 }
 /*rtl:end:ignore*/
 ol > li.o_indent, ul > li.o_indent {
